establishment card/photo overflow fix

--- a/react-app/src/Stylesheets/establishment-list.css
+++ b/react-app/src/Stylesheets/establishment-list.css
@@ -1,9 +1,15 @@
-.establishment-list {
+.establishment-list ul {
+  list-style: none;
+  padding: 0;
+}
+
+.establishment-list a {
+  text-decoration: none;  
 }
 
 .establishment-list .establishment-card {
   width: 100%;
-  height: 75px;
+  height: 100px;
   display: grid;
   grid-template-columns: 75px auto;
   margin-bottom: 10px;
@@ -25,16 +31,11 @@
   padding: 4px 15px;
 }
 
-.establishment-list ul {
-  list-style: none;
-  padding: 0;
+.establishment-list .establishment-card .right > p{
+  margin: 6px 0 0 0;
 }
 
-.establishment-list a {
-  text-decoration: none;  
-}
-
-.establishment-list .establishment-card .name {
+.establishment-list .establishment-card .right .name {
   font-weight: bold;
   font-size: 1.3em;
 }
